--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://vky-vicky.github.io/portfolio-vky",
+  "homepage": "https://vky-vicky.github.io/PORTFOLIO-vignesh/",
   "name": "vky",
   "version": "0.1.0",
   "private": true,
