--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
- "homepage": "https://vky-vicky.github.io/portfolio-vignesh",
+ "homepage": "https://vky-vicky.github.io/portfolio-vignesh.git",
+
  "name": "vky",
  "version": "0.1.0",
  "private": true,
@@ -19,7 +20,7 @@
   "eject": "react-scripts eject",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build"
- },
+},
  "eslintConfig": {
   "extends": [
    "react-app",
